# betternotes

./: .gitignore  README.md  meson.build  run-dev.sh
build-aux/flatpak/: com.github.paperhead.BetterNotes.flathub.json  com.github.paperhead.BetterNotes.json  com.github.souren.BetterNotes.flathub.json  com.github.souren.BetterNotes.json
data/: com.github.paperhead.BetterNotes.desktop.in  com.github.paperhead.BetterNotes.gschema.xml  com.github.paperhead.BetterNotes.metainfo.xml.in  com.github.souren.BetterNotes.desktop.in  com.github.souren.BetterNotes.gschema.xml  com.github.souren.BetterNotes.metainfo.xml.in  meson.build
data/resources/: betternotes.gresource.xml  style.css
po/: POTFILES.in  meson.build
snap/: snapcraft.yaml
snap/gui/: betternotes.desktop
src/: betternotes.in  meson.build
src/betternotes/: application.py  auto_save.py  colors.py  constants.py  main_window.py  note.py  note_card.py  note_store.py  note_window.py  preferences.py  rich_text_serializer.py  rich_text_toolbar.py  shortcuts.py
